# logmixin

./: README.md  pyproject.toml
logmixin/: __init__.py  logmixin.py
tests/: test_logmixin.py
