[tool.poetry]
name = "logmixin"
version = "0.1.2"
description = "Defines a mixin class that adds a convenient get_logger method."
authors = ["Sam Mathias"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sammosummo/logmixin"
repository = "https://github.com/sammosummo/logmixin"
documentation = "https://github.com/sammosummo/logmixin"
keywords = ["logging", "mixin", "log", "logger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
